# IPAtlas

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README.zh-CN.md  docker-compose.yml  main.py  plan.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  routes.py  schemas.py
app/core/: config.py  readiness.py  security.py
app/db/: bootstrap.py  models.py  session.py
app/db/migrations/: README.md
app/intel/: __init__.py  cache.py  geo.py  ip_utils.py  ipapi.py  merge.py  prefix.py  repository.py  types.py
app/sources/: __init__.py  base.py  cloud_ranges.py  dbip_lite.py  iptoasn.py  local_json.py  registry.py  rir_delegated.py  seed.py
app/tasks/: __init__.py  scheduler.py  update.py
app/web/: index.html
app/web/static/: app.js  styles.css
data/: dbip-city-lite.manifest.json
docs/: load-test-plan.zh-CN.md  load-test-report.zh-CN.md  module-guide.zh-CN.md
tests/: conftest.py  test_api.py  test_cli.py  test_dbip_lite_source.py  test_geo_backend.py  test_ipapi.py  test_prefix_and_merge.py  test_prefix_sources.py  test_sources_and_updates.py
tests/load/: README.zh-CN.md  k6-ipatlas.js  sample-ips.txt
